Version avec ClientBundle et correction de findBugs